public enum GameState
{
    Home,
    Start,
    Play,
    Result
}
