using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public interface IInput
{
    Vector3 MoveVector{get;}

}
